src/objects/Question_Questionnaire__c.object
<CustomObject>
    <fields>
        <fullName>Allow_Attachments__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allow user to upload attachment.</description>
        <inlineHelpText>Allow user to upload attachment.</inlineHelpText>
        <label>Allow_Attachments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Allow_Comment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allow user to put comment.</description>
        <inlineHelpText>Allow user to put comment.</inlineHelpText>
        <label>Allow Comment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Allow_Currency__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Admin can define whether its number or a currency, in case of currency, user should be able to choose the currency symbol.</description>
        <label>Allow Currency</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <description>Set Question Questionnaire Category</description>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>FB_Category</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <description>Allow user to put comment.</description>
        <inlineHelpText>Allow user to put comment.</inlineHelpText>
        <label>Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currency_Symbol__c</fullName>
        <label>Currency Symbol</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Currency_Code</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Decimal_value__c</fullName>
        <description>Admin can define the number of the decimal to be allowed</description>
        <label>Decimal value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Default_Value__c</fullName>
        <description>Admin can set Default Value for slider input</description>
        <label>Default Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Help_Text_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allow admin to enter help text of question when checkbox checked.</description>
        <inlineHelpText>Allow admin to enter help text of question when checkbox checked.</inlineHelpText>
        <label>Help Text Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Help_Text__c</fullName>
        <description>Show the help text of questions.</description>
        <inlineHelpText>Show the help text of questions.</inlineHelpText>
        <label>Help Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Allow_Branching__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Admin can allowing  branches for  question</description>
        <label>Is Allow Branching</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Score_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Show and hide score text field.</description>
        <inlineHelpText>Show and hide score text field.</inlineHelpText>
        <label>Is Score Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Weight_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Show and hide weight text field.</description>
        <inlineHelpText>Show and hide weight text field.</inlineHelpText>
        <label>Is Weight Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Max_Char_Length__c</fullName>
        <label>Max Char Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maximum_value__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Maximum value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Metadata__c</fullName>
        <description>admin can define the currency format</description>
        <label>Metadata</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Minimum_Value__c</fullName>
        <label>Minimum Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_Of_Columns__c</fullName>
        <description>Define which question related to column number.</description>
        <label>No Of Columns</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Points__c</fullName>
        <description>Set points of the question</description>
        <label>Points</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Question_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup with Question Group</description>
        <label>Question Group</label>
        <referenceTo>Question_Group__c</referenceTo>
        <relationshipLabel>Question_Questionnaires</relationshipLabel>
        <relationshipName>Question_Questionnaires</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Question_Order__c</fullName>
        <description>Set order of the question</description>
        <label>Question Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup with Question</description>
        <label>Question</label>
        <referenceTo>Question__c</referenceTo>
        <relationshipLabel>Question_Questionnaires</relationshipLabel>
        <relationshipName>Question_Questionnaires</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Questionnaire__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup with Questionnaire</description>
        <label>Questionnaire</label>
        <referenceTo>Questionnaire__c</referenceTo>
        <relationshipLabel>Question_Questionnaires</relationshipLabel>
        <relationshipName>Question_Questionnaires</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_To_Column__c</fullName>
        <description>Define which question is related to particular column.</description>
        <inlineHelpText>Define which question is related to particular column.</inlineHelpText>
        <label>Related To Column</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set true/false for question is required or not</description>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Scoreable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For check, allow question is scoreable or not</description>
        <label>Scoreable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Step_Size__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Admin can set Step Size for slider input</description>
        <label>Step Size</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Weight__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Define the weight of question.</description>
        <inlineHelpText>Define the weight of question.</inlineHelpText>
        <label>Weight</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>background_Color__c</fullName>
        <description>Define the background color of information input .</description>
        <inlineHelpText>Define the background color of information input .</inlineHelpText>
        <label>background_Color</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>is_Delete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox will be checked when Question Questionnaire record  will be deleted.</description>
        <inlineHelpText>Checkbox will be checked when Question Questionnaire record  will be deleted.</inlineHelpText>
        <label>is Delete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>lookup_Object_API_Name__c</fullName>
        <description>Keep the object api name related to question.</description>
        <inlineHelpText>Keep the object api name related to question.</inlineHelpText>
        <label>lookup Object API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lookup_Object_Field_Name__c</fullName>
        <description>Keep the object field name related to question.</description>
        <inlineHelpText>Keep the object field name related to question.</inlineHelpText>
        <label>lookup Object Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Question Questionnaire</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Related_To_Column__c</columns>
        <columns>Question_Group__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>is_Delete__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>is_Delete__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>equals</operation>
            <value>Girikon Test Multi columns</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Templates</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Templates</label>
    </listViews>
    <nameField>
        <label>Question Questionnaire Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Question_Questionnaires</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>